Add a link & seo metatag

--- a/index.html
+++ b/index.html
@@ -9,22 +9,16 @@
 	<link rel="stylesheet"
 		href="css/style.css">
 	<meta name="description"
-		content="">
+		content="En La Noe Spa nos dedicamos a mejorar el bienestar y la salud con productos naturales de alta calidad, como aceites y aromaterapia, integrando conocimientos ancestrales con innovación. Nuestro objetivo es informar, promover y educar sobre los beneficios de estas alternativas para una vida más saludable">
 	<meta property="og:title"
-		content="">
+		content="La Noe Chile - Tienda de medicina alternativa y aromaterapia">
 	<meta property="og:type"
-		content="">
-	<meta property="og:url"
-		content="">
-	<meta property="og:image"
-		content="">
-	<meta property="og:image:alt"
-		content="">
+		content="website">
 	<link rel="icon"
 		href="/img/lanoe.ico"
 		sizes="any">
 </head>
-<body>
+<body id="inicio">
 <nav>
 	<img height="100"
 		width="100"
@@ -32,10 +26,10 @@
 		alt=""/>
 	<h1>La Noe Chile</h1>
 	<ul>
-		<li><a href="#">Inicio</a></li>
-		<li><a href="#">Productos</a></li>
-		<li><a href="#">Servicios</a></li>
-		<li><a href="#">Contacto</a></li>
+		<li><a href="#inicio">Inicio</a></li>
+		<li><a href="#productos">Productos</a></li>
+		<li><a href="#servicios">Servicios</a></li>
+		<li><a href="#contacto">Contacto</a></li>
 	</ul>
 </nav>
 <main>
@@ -78,7 +72,7 @@
 			</a>
 		</article>
 	</section>
-	<section>
+	<section id="productos">
 		<h2>Productos</h2>
 		<img height="200"
 			width="200"
@@ -91,7 +85,7 @@
 		<a href="https://lanoechile.sumupstore.com/productos"
 			target="_blank">Ver mas</a>
 	</section>
-	<section>
+	<section id="servicios">
 		<h2>Servicios</h2>
 		<figure>
 			<img height="200"
@@ -110,7 +104,7 @@
 			<button>Solicitar</button>
 		</figure>
 	</section>
-	<section>
+	<section id="contacto">
 		<h2>Contacto</h2>
 		<a href="https://lanoechile.sumupstore.com/contacto"
 			target="_blank">Formulario de contacto</a>
