--- a/index.html
+++ b/index.html
@@ -14,140 +14,166 @@
 		content="La Noe Chile - Tienda de medicina alternativa y aromaterapia">
 	<meta property="og:type"
 		content="website">
+	<script src="https://cdn.tailwindcss.com"></script>
 	<link rel="icon"
 		href="/img/lanoe.ico"
 		sizes="any">
 </head>
 <body id="inicio">
-<nav>
-	<img height="100"
-		width="100"
-		src="img/lanoe.jpeg"
-		alt=""/>
-	<h1>La Noe Chile</h1>
-	<ul>
-		<li><a href="#inicio">Inicio</a></li>
-		<li><a href="#productos">Productos</a></li>
-		<li><a href="#servicios">Servicios</a></li>
-		<li><a href="#contacto">Contacto</a></li>
+<nav class="flex justify-between px-20 py-4">
+	<a href="#inicio"
+		class="flex items-center gap-4">
+		<img class="object-cover w-20 h-20"
+			src="img/lanoe.jpeg"
+			alt=""/>
+		<h1 class="text-2xl font-bold">La Noe Chile</h1>
+	</a>
+	<ul class="flex gap-4 items-center">
+		<li><a class="hover:text-rose-300 p-2"
+			href="#inicio">Inicio</a></li>
+		<li><a class="hover:text-rose-300 p-2"
+			href="#productos">Productos</a></li>
+		<li><a class="hover:text-rose-300 p-2"
+			href="#servicios">Servicios</a></li>
+		<li><a class="hover:text-rose-300 p-2"
+			href="#contacto">Contacto</a></li>
 	</ul>
 </nav>
 <main>
-	<section>
-		<img height="400"
-			width="400"
+	<section class="w-full flex justify-center">
+		<img class="object-contain w-full h-[500px]"
 			src="img/imagen8.jpeg"
 			alt=""/>
 	</section>
-	<section>
-		<h2>Quienes Somos</h2>
-		<p>En <strong>La Noe Spa</strong> nos dedicamos a mejorar el bienestar y la
-			salud con
-			productos naturales de alta calidad, como aceites y aromaterapia,
-			integrando conocimientos ancestrales con innovación</p>
-		<p>Nuestro objetivo es informar, promover y educar sobre los beneficios de
-			estas alternativas para una vida más saludable</p>
-		<article>
-			<img height="200"
-				width="200"
+	<section class="flex items-center justify-center gap-16 p-16">
+		<article class="flex gap-8 flex-col w-[550px]">
+			<h2 class="text-4xl font-semibold">Quienes Somos</h2>
+			<p class="text-lg">En <strong>La Noe Spa</strong> nos dedicamos a mejorar
+				el bienestar y
+				la
+				salud con
+				productos naturales de alta calidad, como aceites y aromaterapia,
+				integrando conocimientos ancestrales con innovación</p>
+			<p class="text-lg">Nuestro objetivo es informar, promover y educar sobre
+				los beneficios de
+				estas alternativas para una vida más saludable</p>
+		</article>
+		<article class="flex flex-col w-56 gap-4">
+			<img class="object-cover w-56 h-56"
 				src="img/imagen9.jpeg"
 				alt=""/>
-			<h3>Asesoria personalizada</h3>
+			<h3 class="text-xl">Asesoria personalizada</h3>
 			<p>Te ayudamos a mejorar tu bienestar y salud utilizando productos a tus
 				necesidades</p>
-			<h4>Encuentranos en nuestras redes</h4>
-			<a href="https://www.instagram.com/lanoechile/"
-				target="_blank">
-				<img height="50"
-					width="50"
-					src="img/instagram.png"
-					alt=""/>
-			</a>
-			<a href="https://www.tiktok.com/@lanoechile"
-				target="_blank">
-				<img height="40"
-					width="40"
-					src="img/tiktok.png"
-					alt=""/>
-			</a>
+			<div class="flex flex-col gap-2">
+				<h4>Encuentranos en nuestras redes</h4>
+				<div class="flex items-center gap-4">
+					<a href="https://www.instagram.com/lanoechile/"
+						target="_blank">
+						<img height="50"
+							width="50"
+							src="img/instagram.png"
+							alt=""/>
+					</a>
+					<a href="https://www.tiktok.com/@lanoechile"
+						target="_blank">
+						<img height="40"
+							width="40"
+							src="img/tiktok.png"
+							alt=""/>
+					</a>
+				</div>
+			</div>
 		</article>
 	</section>
-	<section id="productos">
-		<h2>Productos</h2>
-		<img height="200"
-			width="200"
-			src="img/imagen10.jpeg"
-			alt=""/>
-		<img height="200"
-			width="200"
-			src="img/imagen10.jpeg"
-			alt=""/>
+	<section class="flex p-16 gap-16 flex-col items-center justify-center"
+		id="productos">
+		<h2 class="text-4xl">Productos</h2>
+		<div class="w-full flex justify-evenly">
+			<img class="object-contain w-72 h-72"
+				src="img/imagen10.jpeg"
+				alt=""/>
+			<img class="object-contain w-72 h-72"
+				src="img/imagen10.jpeg"
+				alt=""/>
+		</div>
 		<a href="https://lanoechile.sumupstore.com/productos"
-			target="_blank">Ver mas</a>
+			class="text-xl py-4 px-8 bg-rose-200 rounded-lg"
+			target="_blank">
+			Ver mas
+		</a>
 	</section>
-	<section id="servicios">
-		<h2>Servicios</h2>
-		<figure>
-			<img height="200"
-				width="200"
-				src="img/imagen3.jpeg"
-				alt=""/>
-			<figcaption>Terapias</figcaption>
-			<button>Solicitar</button>
-		</figure>
-		<figure>
-			<img height="200"
-				width="200"
-				src="img/imagen4.jpeg"
-				alt=""/>
-			<figcaption>Asesoria</figcaption>
-			<button>Solicitar</button>
-		</figure>
+	<section class="flex p-16 gap-16 flex-col items-center justify-center"
+		id="servicios">
+		<h2 class="text-4xl">Servicios</h2>
+		<div class="w-full flex justify-evenly">
+			<div class="flex flex-col gap-2">
+				<img class="object-contain w-52 h-52"
+					src="img/imagen3.jpeg"
+					alt=""/>
+				<div class="flex items-center justify-between">
+					<span>Terapias</span>
+					<button class="py-2 px-4 bg-rose-200 rounded-lg">Solicitar</button>
+				</div>
+			</div>
+			<div class="flex flex-col gap-2">
+				<img class="object-contain w-52 h-52"
+					src="img/imagen3.jpeg"
+					alt=""/>
+				<div class="flex items-center justify-between">
+					<span>Asesoria</span>
+					<button class="py-2 px-4 bg-rose-200 rounded-lg">Solicitar</button>
+				</div>
+			</div>
+		</div>
 	</section>
-	<section id="contacto">
-		<h2>Contacto</h2>
+	<section class="flex p-16 gap-16 flex-col items-center justify-center"
+		id="contacto">
+		<h2 class="text-4xl">Contacto</h2>
 		<a href="https://lanoechile.sumupstore.com/contacto"
-			target="_blank">Formulario de contacto</a>
-		<div>
-			<label>Email</label>
-			<a href="mailto: me@abc">me@abc</a>
-		</div>
-		<div>
-			<label>Telefono</label>
-			<span>+</span>
-		</div>
-		<div>
-			<label>Direccion</label>
-			<ul>
-				<li>Persa Victor Manuel , sector 4 local 138</li>
-				<li>San Diego 53, Santiago Centro</li>
-			</ul>
-		</div>
-		<div>
-			<label>Horarios</label>
-			<ul>
-				<li>Persa Victor Manuel , sector 4 local 138</li>
-				<ul>
-					<li>Lunes a Viernes 10:00 a 20:00</li>
-					<li>Sabado 10:00 a 14:00</li>
-				</ul>
-				<li>San Diego 53, Santiago Centro</li>
-				<ul>
-					<li>Lunes a Viernes 10:00 a 20:00</li>
-					<li>Sabado 10:00 a 14:00</li>
-				</ul>
-			</ul>
+			class="text-xl py-4 px-8 bg-rose-200 rounded-lg"
+			target="_blank">Ir a formulario de contacto</a>
+		<div class="flex gap-16">
+			<div class="flex flex-col gap-4">
+				<div class="flex flex-col">
+					<label class="font-bold">Email</label>
+					<a href="mailto: me@abc">me@abc</a>
+				</div>
+				<div class="flex flex-col">
+					<label class="font-bold">Telefono</label>
+					<span>+</span>
+				</div>
+			</div>
+			<div class="flex flex-col gap-4">
+				<div class="flex flex-col gap-4">
+					<label class="font-bold">Direccion y Horarios</label>
+					<ul class="flex flex-col gap-2 list-inside list-disc">
+						<li>Persa Victor Manuel , sector 4 local 138</li>
+						<ul class="flex flex-col gap-2 ml-8 list-inside list-disc">
+							<li>Lunes a Viernes 10:00 a 20:00</li>
+							<li>Sabado 10:00 a 14:00</li>
+						</ul>
+						<li>San Diego 53, Santiago Centro</li>
+						<ul class="flex flex-col gap-2 ml-8 list-inside list-disc">
+							<li>Lunes a Viernes 10:00 a 20:00</li>
+							<li>Sabado 10:00 a 14:00</li>
+						</ul>
+					</ul>
+				</div>
+			</div>
 		</div>
 	</section>
 </main>
-<footer>
-	<p>2024 La Noe Chile</p>
-	<a href="https://lanoechile.sumupstore.com/pagina/terminos-y-condiciones"
-		target="_blank">Terminos Legales</a>
-	<a href="https://lanoechile.sumupstore.com/pagina/politica-de-privacidad"
-		target="_blank">Politica de Privacidad</a>
-	<a href="https://lanoechile.sumupstore.com/politica-de-cookies"
-		target="_blank">Politica de Cookies</a>
+<footer class="p-8 bg-black text-white flex justify-between">
+	<p class="font-bold">2024 La Noe Chile</p>
+	<div class="flex gap-8">
+		<a href="https://lanoechile.sumupstore.com/pagina/terminos-y-condiciones"
+			target="_blank">Terminos Legales</a>
+		<a href="https://lanoechile.sumupstore.com/pagina/politica-de-privacidad"
+			target="_blank">Politica de Privacidad</a>
+		<a href="https://lanoechile.sumupstore.com/politica-de-cookies"
+			target="_blank">Politica de Cookies</a>
+	</div>
 </footer>
 </body>
 </html>
