Adjust style with tailwind

--- a/index.html
+++ b/index.html
@@ -130,12 +130,12 @@
 	<section class="flex p-16 gap-16 flex-col items-center justify-center"
 		id="contacto">
 		<h2 class="text-4xl">Contacto</h2>
-		<a href="https://lanoechile.sumupstore.com/contacto"
-			class="text-xl py-4 px-8 bg-rose-200 rounded-lg"
-			target="_blank">Ir a formulario de contacto</a>
 		<div class="flex gap-16">
 			<div class="flex flex-col gap-4">
-				<div class="flex flex-col">
+				<div class="flex flex-col gap-4">
+					<a href="https://lanoechile.sumupstore.com/contacto"
+						class="text-xl py-4 px-8 bg-rose-200 rounded-lg"
+						target="_blank">Ir a formulario de contacto</a>
 					<label class="font-bold">Email</label>
 					<a href="mailto: me@abc">me@abc</a>
 				</div>
@@ -164,8 +164,24 @@
 		</div>
 	</section>
 </main>
-<footer class="p-8 bg-black text-white flex justify-between">
-	<p class="font-bold">2024 La Noe Chile</p>
+<footer class="p-4 bg-black text-white flex justify-between items-center">
+	<div class="flex items-center gap-4">
+		<p class="font-bold">2024 La Noe Chile</p>
+		<a href="https://www.instagram.com/lanoechile/"
+			target="_blank">
+			<img height="50"
+				width="50"
+				src="img/instagram.png"
+				alt=""/>
+		</a>
+		<a href="https://www.tiktok.com/@lanoechile"
+			target="_blank">
+			<img height="40"
+				width="40"
+				src="img/tiktok-white.png"
+				alt=""/>
+		</a>
+	</div>
 	<div class="flex gap-8">
 		<a href="https://lanoechile.sumupstore.com/pagina/terminos-y-condiciones"
 			target="_blank">Terminos Legales</a>
