Adjust style with css

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!doctype html>
-<html class="no-js"
-	lang="">
+<html lang="">
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport"
@@ -14,175 +13,159 @@
 		content="La Noe Chile - Tienda de medicina alternativa y aromaterapia">
 	<meta property="og:type"
 		content="website">
-	<script src="https://cdn.tailwindcss.com"></script>
 	<link rel="icon"
 		href="/img/lanoe.ico"
 		sizes="any">
 </head>
 <body id="inicio">
-<nav class="flex justify-between px-20 py-4">
+<nav class="nav">
 	<a href="#inicio"
-		class="flex items-center gap-4">
-		<img class="object-cover w-20 h-20"
+		class="logo">
+		<img class="logo-img"
 			src="img/lanoe.jpeg"
-			alt=""/>
-		<h1 class="text-2xl font-bold">La Noe Chile</h1>
+			alt="">
+		<h1>La Noe Chile</h1>
 	</a>
-	<ul class="flex gap-4 items-center">
-		<li><a class="hover:text-rose-300 p-2"
+	<ul class="nav-links">
+		<li><a class="nav-link"
 			href="#inicio">Inicio</a></li>
-		<li><a class="hover:text-rose-300 p-2"
+		<li><a class="nav-link"
 			href="#productos">Productos</a></li>
-		<li><a class="hover:text-rose-300 p-2"
+		<li><a class="nav-link"
 			href="#servicios">Servicios</a></li>
-		<li><a class="hover:text-rose-300 p-2"
+		<li><a class="nav-link"
 			href="#contacto">Contacto</a></li>
 	</ul>
 </nav>
 <main>
-	<section class="w-full flex justify-center">
-		<img class="object-contain w-full h-[500px]"
+	<section class="carousel">
+		<img class="carousel-img"
 			src="img/imagen8.jpeg"
-			alt=""/>
+			alt="">
 	</section>
-	<section class="flex items-center justify-center gap-16 p-16">
-		<article class="flex gap-8 flex-col w-[550px]">
-			<h2 class="text-4xl font-semibold">Quienes Somos</h2>
-			<p class="text-lg">En <strong>La Noe Spa</strong> nos dedicamos a mejorar
-				el bienestar y
-				la
-				salud con
-				productos naturales de alta calidad, como aceites y aromaterapia,
-				integrando conocimientos ancestrales con innovación</p>
-			<p class="text-lg">Nuestro objetivo es informar, promover y educar sobre
-				los beneficios de
-				estas alternativas para una vida más saludable</p>
+	<section class="about">
+		<article class="about-info">
+			<h2>Quienes Somos</h2>
+			<p>En <strong>La Noe Spa</strong> nos dedicamos a mejorar el bienestar y
+				la salud con productos naturales de alta calidad, como aceites y
+				aromaterapia, integrando conocimientos ancestrales con innovación.</p>
+			<p>Nuestro objetivo es informar, promover y educar sobre los beneficios de
+				estas alternativas para una vida más saludable.</p>
 		</article>
-		<article class="flex flex-col w-56 gap-4">
-			<img class="object-cover w-56 h-56"
+		<article class="about-services">
+			<img class="service-img"
 				src="img/imagen9.jpeg"
-				alt=""/>
-			<h3 class="text-xl">Asesoria personalizada</h3>
+				alt="">
+			<h3>Asesoria personalizada</h3>
 			<p>Te ayudamos a mejorar tu bienestar y salud utilizando productos a tus
-				necesidades</p>
-			<div class="flex flex-col gap-2">
-				<h4>Encuentranos en nuestras redes</h4>
-				<div class="flex items-center gap-4">
+				necesidades.</p>
+			<div class="social">
+				<span>Encuentranos en nuestras redes</span>
+				<div class="social-links">
 					<a href="https://www.instagram.com/lanoechile/"
-						target="_blank">
-						<img height="50"
-							width="50"
-							src="img/instagram.png"
-							alt=""/>
-					</a>
+						target="_blank"><img
+						width="50"
+						height="50"
+						src="img/instagram.png"
+						alt="Instagram"></a>
 					<a href="https://www.tiktok.com/@lanoechile"
-						target="_blank">
-						<img height="40"
-							width="40"
-							src="img/tiktok.png"
-							alt=""/>
-					</a>
+						target="_blank"><img src="img/tiktok.png"
+						width="40"
+						height="40"
+						alt="TikTok"></a>
 				</div>
 			</div>
 		</article>
 	</section>
-	<section class="flex p-16 gap-16 flex-col items-center justify-center"
+	<section class="products"
 		id="productos">
-		<h2 class="text-4xl">Productos</h2>
-		<div class="w-full flex justify-evenly">
-			<img class="object-contain w-72 h-72"
+		<h2>Productos</h2>
+		<div class="product-gallery">
+			<img class="product-img"
 				src="img/imagen10.jpeg"
-				alt=""/>
-			<img class="object-contain w-72 h-72"
+				alt="">
+			<img class="product-img"
 				src="img/imagen10.jpeg"
-				alt=""/>
+				alt="">
 		</div>
 		<a href="https://lanoechile.sumupstore.com/productos"
-			class="text-xl py-4 px-8 bg-rose-200 rounded-lg"
-			target="_blank">
-			Ver mas
-		</a>
+			class="btn"
+			target="_blank">Ver mas</a>
 	</section>
-	<section class="flex p-16 gap-16 flex-col items-center justify-center"
+	<section class="services"
 		id="servicios">
-		<h2 class="text-4xl">Servicios</h2>
-		<div class="w-full flex justify-evenly">
-			<div class="flex flex-col gap-2">
-				<img class="object-contain w-52 h-52"
+		<h2>Servicios</h2>
+		<div class="service-list">
+			<div class="service-item">
+				<img class="service-img"
 					src="img/imagen3.jpeg"
-					alt=""/>
-				<div class="flex items-center justify-between">
+					alt="">
+				<div class="service-action">
 					<span>Terapias</span>
-					<button class="py-2 px-4 bg-rose-200 rounded-lg">Solicitar</button>
+					<button class="btn">Solicitar</button>
 				</div>
 			</div>
-			<div class="flex flex-col gap-2">
-				<img class="object-contain w-52 h-52"
+			<div class="service-item">
+				<img class="service-img"
 					src="img/imagen3.jpeg"
-					alt=""/>
-				<div class="flex items-center justify-between">
+					alt="">
+				<div class="service-action">
 					<span>Asesoria</span>
-					<button class="py-2 px-4 bg-rose-200 rounded-lg">Solicitar</button>
+					<button class="btn">Solicitar</button>
 				</div>
 			</div>
 		</div>
 	</section>
-	<section class="flex p-16 gap-16 flex-col items-center justify-center"
+	<section class="contact"
 		id="contacto">
-		<h2 class="text-4xl">Contacto</h2>
-		<div class="flex gap-16">
-			<div class="flex flex-col gap-4">
-				<div class="flex flex-col gap-4">
-					<a href="https://lanoechile.sumupstore.com/contacto"
-						class="text-xl py-4 px-8 bg-rose-200 rounded-lg"
-						target="_blank">Ir a formulario de contacto</a>
-					<label class="font-bold">Email</label>
+		<h2>Contacto</h2>
+		<div class="contact-details">
+			<div class="contact-details-entry">
+				<a href="https://lanoechile.sumupstore.com/contacto"
+					class="btn"
+					target="_blank">Ir a formulario de contacto</a>
+				<div class="contact-details-entry-col">
+					<label class="contact-label">Email</label>
 					<a href="mailto: me@abc">me@abc</a>
 				</div>
-				<div class="flex flex-col">
-					<label class="font-bold">Telefono</label>
+				<div class="contact-details-entry-col">
+					<label class="contact-label">Telefono</label>
 					<span>+</span>
 				</div>
 			</div>
-			<div class="flex flex-col gap-4">
-				<div class="flex flex-col gap-4">
-					<label class="font-bold">Direccion y Horarios</label>
-					<ul class="flex flex-col gap-2 list-inside list-disc">
-						<li>Persa Victor Manuel , sector 4 local 138</li>
-						<ul class="flex flex-col gap-2 ml-8 list-inside list-disc">
-							<li>Lunes a Viernes 10:00 a 20:00</li>
-							<li>Sabado 10:00 a 14:00</li>
-						</ul>
-						<li>San Diego 53, Santiago Centro</li>
-						<ul class="flex flex-col gap-2 ml-8 list-inside list-disc">
-							<li>Lunes a Viernes 10:00 a 20:00</li>
-							<li>Sabado 10:00 a 14:00</li>
-						</ul>
+			<div class="contact-details-entry-col">
+				<label class="contact-label">Direccion y Horarios</label>
+				<ul class="contact-details-ul">
+					<li>Persa Victor Manuel, sector 4 local 138</li>
+					<ul>
+						<li>Lunes a Viernes 10:00 a 20:00</li>
+						<li>Sabado 10:00 a 14:00</li>
 					</ul>
-				</div>
+					<li>San Diego 53, Santiago Centro</li>
+					<ul>
+						<li>Lunes a Viernes 10:00 a 20:00</li>
+						<li>Sabado 10:00 a 14:00</li>
+					</ul>
+				</ul>
 			</div>
 		</div>
 	</section>
 </main>
-<footer class="p-4 bg-black text-white flex justify-between items-center">
-	<div class="flex items-center gap-4">
-		<p class="font-bold">2024 La Noe Chile</p>
+<footer class="footer">
+	<div class="footer-social">
+		<strong>2024 La Noe Chile</strong>
 		<a href="https://www.instagram.com/lanoechile/"
-			target="_blank">
-			<img height="50"
-				width="50"
-				src="img/instagram.png"
-				alt=""/>
-		</a>
+			target="_blank"><img src="img/instagram.png"
+			width="50"
+			height="50"
+			alt="Instagram"></a>
 		<a href="https://www.tiktok.com/@lanoechile"
-			target="_blank">
-			<img height="40"
-				width="40"
-				src="img/tiktok-white.png"
-				alt=""/>
-		</a>
+			target="_blank"><img src="img/tiktok-white.png"
+			width="40"
+			height="40"
+			alt="TikTok"></a>
 	</div>
-	<div class="flex gap-8">
+	<div class="footer-links">
 		<a href="https://lanoechile.sumupstore.com/pagina/terminos-y-condiciones"
 			target="_blank">Terminos Legales</a>
 		<a href="https://lanoechile.sumupstore.com/pagina/politica-de-privacidad"
