Adjust contact info

--- a/index.html
+++ b/index.html
@@ -258,11 +258,11 @@
                         <br>
                         <h4 class="text-uppercase h6 font700">Email</h4>
                         <p>
-                            <a href="mailto:support@assan.com" target="_blank">support@assan.com</a></p>
+                            <a href="mailto:la.noe.maceradosgourmet@gmail.com" target="_blank">la.noe.maceradosgourmet@gmail.com</a></p>
                         <br>
                         <h4 class="text-uppercase h6 font700">Teléfono</h4>
                         <p>
-                            <a href="https://wa.me/1202344493949" target="_blank">+120 234-449-3949</a>
+                            <a href="https://wa.me/56957709126" target="_blank">+56 9 5770 9126</a>
                         </p>
                     </div>
                     <div class="col-md-7">
